k8s-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: towers-dev
  labels:
    app: towers
spec:
  selector:
    app: towers
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gameserver
  namespace: towers-dev
  labels:
    app: towers
spec:
  selector:
    app: towers
  ports:
    - name: socket
      port: 3000
      targetPort: 3000
      protocol: TCP
